# uikidcm

./: .gitignore  README
Lib/: CMakeLists.txt  Makefile  Makefile.inc  crosscompile.cmake
Lib/Modules/: CMakeLists.txt  Makefile
Lib/Modules/Comm/: CMakeLists.txt  Makefile
Lib/Modules/ImageProc/: CMakeLists.txt  Makefile  Makefile.local  luaImageProc.cpp  (+9 more)
Lib/Modules/visionModeling/: CMakeLists.txt  Makefile  Makefile.local  ballModelingObject.cpp  ballModelingObject.h  luaImageProc.cpp  luaVisionModeling.cpp  luaVisionModeling.h  lua_accumulate_ball.h  lua_color_stats.cpp  lua_color_stats.h  lua_field_lines.cpp  lua_goal_posts_white.cpp  nonlinearMeasurementPdf.cpp  nonlinearMeasurementPdf.h  nonlinearSystemPdf.cpp  particleFilterConfig.h  preprocessedObservation.cpp  preprocessedObservation.h  stateModelingInterface.cpp  stateModelingInterface.h
Lib/Platform/: Makefile
Lib/Platform/OP/Body/DspCode/: CMakeLists.txt  DspCode.c  DspCode.h  DspControl.h  Makefile  RobotParameter.h  ctrl_rs232.c  ctrl_rs232.h  linuxdef.h  luaDspCode.cpp
Lib/Platform/OP/Camera/: CMakeLists.txt  JPGApi.cpp  JPGApi.h  LogMsg.cpp  Makefile  OPCam.cpp  ReadYuyv.cpp  ReadYuyv.h  v4l2.cpp
Lib/Platform/OP/GameControl/: CMakeLists.txt  Makefile  OPGameControl.lua  TestGameControl.lua  luaOPGameControlReceiver.cc  timeScalar.h
Lib/Platform/OP/Kinematics/: CMakeLists.txt  Makefile
Player/: cognition.lua  init.lua  listen_monitor.lua  listen_team_monitor.lua  main_op.lua  run_dcm.lua  run_main_op.lua  run_monitor.lua  sample.yuyv  sim_vision.lua  tempResult  test_atan2.lua  test_speed_168.lua  test_sqrt.lua  test_vision.lua  test_walk_line.lua  view_camera_param.lua
Player/BodyFSM/: BodyFSM.lua  BodyFSM2.lua  BodyFSM2.lua.bak  behavior.lua  bodyAnticipate.lua  bodyApproach.lua  bodyChase.lua  bodyGotoCenter.lua  bodyKick.lua  bodyPosition.lua  bodyPositionGoalie.lua  bodySearch.lua  bodyWalkKick.lua
Player/Config/: Config.lua  Config_OP.lua  calibration.lua
Player/Data/: FieldandBall0318.raw  SEANTEST.raw  gateline0318.raw  lut_0303_174c.raw  lut_0328baixian.raw  lut_0328qiu.raw  lut_0603_174.raw  lut_0710166.raw  lut_0712166.raw  lut_0713166.raw  lut_0721A173cs.raw  lut_0721A173lv.raw  lut_1007ran.raw  lut_1008nodoors.raw  lut_1009_174.raw  lut_1009cs.raw  lut_1017cs02.raw  lut_1018cs01.raw  lut_1018ran.raw  lut_1018rrq.raw  lut_10271800.raw  lut_1107_174.raw  lut_111317402.raw  lut_1113r.raw  lut_1114.raw  lut_1115.raw  lut_1204.raw  lut_1206.raw  lut_12062.raw  lut_140707_169.raw  lut_140708_169.raw  lut_160324.raw  lut_160419.raw  lut_1604191.raw  lut_160420.raw  lut_1604201.raw  lut_1604202.raw  lut_170712qiudi.raw  lut_170712xianmen.raw  lut_20140704.raw  (+6 more)
Player/Dev/: Camera.lua
Player/Graveyard/: run_tester.lua  tester.lua
Player/HeadFSM/: headIdle.lua  headKick.lua  headKickFollow.lua  headLog.lua  headLookGoal.lua  headLookLandmarks.lua  headReadyLookGoal.lua  headScan.lua  headTrack.lua  headTrack.lua.bak
Player/Lib/: Dynamixel.lua  ImageProc.so.noro  OPCam.so.ro  OPCommManager.lua  OPCommManager_darwin.lua  OPGameControl.lua  dcm.lua  run_dcm.lua
Player/Modeling/: Detection.lua  Modeling.lua  modelBall.lua
Player/Motion/: BasicKick.lua  Motion.lua  dive.lua  divewait.lua  falling.lua  keyframe.lua  mcm.lua  relax.lua  sit.lua  stance.lua  standstill.lua  standup.lua  standup.lua.bak
Player/Util/: util.lua
Player/Vision/: Detection.lua  HeadTransform.lua  HeadTransform.lua.bak  Vision.lua  detectBall.lua  detectBall.lua.bak  detectCorner.lua  detectGoal.lua  detectLine.lua  detectSpot.lua  vcm.lua
Player/World/: PoseFilter.lua  TeamBasic.lua  World.lua  corner_lut.lua
Tools/Matlab/: MonitorWireless.m  README.md  light on.raw  new_darwin.raw  test_goal.raw
(+53 files in other folders)
